--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,11 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="vendors/jquery-3.5.1.min.js"></script>
     <script src="scripts/client.js"></script>
-    <link src='styles.css'></link>
+    <!-- <link rel="stylesheet" type="text/css" href="styles.css"/></link> -->
     <title>jQuery Server Side Calculator</title>
 </head>
 
 <body>
-    
+    <h1>Server Side Calculator</h1>
+
+    <input type="text"></input>
+    <button></button>
+    <button></button>
+    <button></button>
+    <button></button>
+    <input type="text"></input>
+    <button></button>
+    <button></button>
+
+    <!-- id to receive calculation -->
+
+    <!-- ul to list history of calculations -->
+    <ul></ul> 
+
 </body>
 </html>
