--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="vendors/jquery-3.5.1.min.js"></script>
     <script src="scripts/client.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css"/></link> -->
+    <!-- <link rel="stylesheet" href="styles.css"/></link> -->
     <title>jQuery Server Side Calculator</title>
 </head>
 
