--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,27 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="vendors/jquery-3.5.1.min.js"></script>
-    <script src="scripts/client.js"></script>
-    <!-- <link rel="stylesheet" href="styles.css"/></link> -->
+    <script src="scripts/client.js"></script> 
+    <link rel="stylesheet" href="styles/styles.css">
     <title>jQuery Server Side Calculator</title>
 </head>
 
 <body>
     <h1>Server Side Calculator</h1>
 
-    <input type="text"></input>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <input type="text"></input>
-    <button></button>
-    <button></button>
-
+    <!-- Input and calculation feilds -->
+    <div id="calculatorBody">
+        <input type="text" id="num1" placeholder="Enter Interger"></input>
+        <button id="plusOp">+</button>
+        <button id="minusOp">-</button>
+        <button id="multiplyOp">*</button>
+        <button id="divideOp">/</button>
+        <input type="text" id="num2" placeholder="Enter Interger"></input>
+        <button id="submit">=</button>
+        <button id="clear">C</button>
+    </div>
+    
     <!-- id to receive calculation -->
+    <h3 id="calculationTotal">Total: </h3>
 
     <!-- ul to list history of calculations -->
-    <ul></ul> 
+    <ul id="calculationHistory"> 
+
+    </ul> 
 
 </body>
 </html>
+
+
+<!-- X When the submit (`=` button) is clicked, capture this input, bundle it up in an object, and send this object to the server via a POST. 
+X There should also be a 'C' button that will clear the user input fields.  -->
