woring on POST request

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,12 +15,12 @@
     <!-- Input and calculation feilds -->
     <div id="calculatorBody">
         <input type="text" id="num1" placeholder="Enter Interger"></input>
-        <button id="plusOp">+</button>
-        <button id="minusOp">-</button>
-        <button id="multiplyOp">*</button>
-        <button id="divideOp">/</button>
+        <button class='operator' data-value="+">+</button>
+        <button class='operator' id="minusOp" data-value="-">-</button>
+        <button class='operator' id="multiplyOp" data-value="*">*</button>
+        <button class='operator' id="divideOp" data-value="/">/</button>
         <input type="text" id="num2" placeholder="Enter Interger"></input>
-        <button id="submit">=</button>
+        <button id="submitButton">=</button>
         <button id="clear">C</button>
     </div>
     
