--- a/server/public/index.html
+++ b/server/public/index.html
@@ -25,7 +25,8 @@
     </div>
     
     <!-- id to receive calculation -->
-    <h3 id="calculationTotal">Total: </h3>
+    <h3 id="calculationTotal"> </h3>
+    <!-- <span id='calcTot'></span> -->
 
     <!-- ul to list history of calculations -->
     <ul id="calculationHistory"> 
